<resources>
    <string name="app_name">LinkUp</string>
    <string name="username">Username</string>
    <string name="create_new_account">Create New Account</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="linkup_header">LinkUp</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="hello_chat_fragment">Hello Chat fragment</string>
    <string name="hello_user_fragment">Hello User fragment</string>
    <string name="type_a_message">Type a Message</string>
    <string name="btn_send_desc">Send the Message</string>
</resources>
