<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/colorPrimaryDark"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartActivity">

    <TextView
        android:text="@string/linkup_header"
        android:textSize="36sp"
        android:textStyle="bold"
        android:textColor="#fff"
        android:fontFamily="sans-serif"
        android:shadowColor="@color/colorShadow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:background="@color/colorPrimary"
        android:id="@+id/btn_login"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/login"
        android:textColor="#fff"
        android:layout_marginTop="100dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:textColor="#fff"
        android:shadowColor="@color/colorShadow"
        android:background="@color/colorPrimary"
        android:id="@+id/btn_register"
        android:text="@string/register"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>